--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,9 +1,7 @@
-<!--<h1>Lists#new</h1>-->
-<!--<p>Find me in app/views/lists/new.html.erb</p>-->
-
 <h1>新規投稿</h1>
 <!--form_with部分-->
-<%= form_with model:List.new,local:true do |f|%>
+<%= form_with model: @list, url: '/lists', method: :post, local: true do |f| %>
+
  <h4>タイトル</h4>
  <%=f.text_field:title%>
 
@@ -11,4 +9,7 @@
  <%=f.text_area:body%>
 
  <%=f.submit'投稿'%>
-<%end%>
+
+<% end %>
+
+<!--<%= form_with model:@list,url:'/lists',method::post,local:true do |f|%>-->
